Fix horizontal scroll on mobile view

--- a/dashboard-2/styles.css
+++ b/dashboard-2/styles.css
@@ -191,6 +191,11 @@ input {
   .gradient-side .bullets .question-wrapper .question {
     font-size: 13px;
   }
+  .main-wrapper {
+    width: 100%;
+    height: 120vh;
+    overflow: auto;
+  }
 }
 @media (min-width: 750px) and (max-width: 990px) {
   #open-side-nav {
