--- a/dashboard/dashboard.scss
+++ b/dashboard/dashboard.scss
@@ -217,6 +217,12 @@ input {
       font-size: 13px;
     }
   }
+
+  .main-wrapper {
+    width: 100%;
+    height: 120vh;
+    overflow: auto;
+  }
 }
 
 // Tablet
